--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
              <div id="signup-wrapper">
             <div id="top-items">
                 <h1>New Here?</h1>
-                 <h6>Sign Up to 'EXPENSE MANAGEMENT SYSTEM'<br> for better experience!</h6>
-                  <button onclick="goToSignUp()">SIGN UP</button>
+                <div>
+
+                    <h6>Sign Up to 'EXPENSE MANAGEMENT SYSTEM'<br> for better experience!</h6>
+                     <button onclick="goToSignUp()">SIGN UP</button>
+                </div>
 
                   <div><img src="images/login images/login.svg"/></div>
             </div>
