--- a/pages/Dashboard/dashboard.html
+++ b/pages/Dashboard/dashboard.html
@@ -116,6 +116,16 @@
 
         }
 
+        @media screen and (max-width : 700px) {
+            
+            table {
+               overflow-x:scroll ;
+               overflow-y:scroll ;
+
+            }
+            
+        }
+
 
 
     </style>
