--- a/pages/Dashboard/dashboard.html
+++ b/pages/Dashboard/dashboard.html
@@ -123,6 +123,14 @@
                overflow-y:scroll ;
 
             }
+
+            h1{
+                font-size: 1.5rem;
+            }
+
+            .toph1{
+                font-size: 1rem;
+            }
             
         }
 
